31 May 2021 Petasis George <petasis@iit.demokritos.gr>
 * clarin/app/Http/routes.php: Added some more routes (domain dependent) to
 support the UI in Angular.
 * clarin-angular/src/app/app-routing.module.ts:
 * clarin-angular/src/app/components/views/navbar/navbar.component.html:
 * clarin-angular/src/app/components/views/navbar/navbar.component.ts:
 * clarin-angular/src/app/components/views/welcome/welcome.component.html:
 * clarin-angular/src/app/components/views/welcome/welcome.component.ts:
 * clarin-angular/src/index.html: Minor changes for hosting both UIs
 (AngularJS & Angular) on the same server.
 
28 May 2021 Petasis George <petasis@iit.demokritos.gr>
 * clarin-angular: A new folder, containing a migration from AngularJS to
 Angular. Migration has been done by SEMANTIKA (http://semantika.si/en-us/).

05 May 2021 Petasis George <petasis@iit.demokritos.gr>
 * frontend/clarin/js/directives/text-widget.js:
 * frontend/clarin/css/clarin.css: Added CSS styling for TEI elements.
 * backend/clarin/.env.example:
 * backend/clarin/app/Http/Controllers/DocumentController.php: Added execution
 of handlers (for the time being through a call to an external, django-based
 service).
   Backend (Laravel) upgraded to 8.x.

04 May 2021 Petasis George <petasis@iit.demokritos.gr>
 * backend/clarin/app/Http/Controllers/DocumentController.php:
 * backend/clarin/app/Models/Document.php:
 * backend/clarin/database/migrations/2021_04_27_112120_add_document_fields.php:
 * frontend/clarin/js/controllers/addCollectionCtrl.js:
 * frontend/clarin/js/directives/uploader-directive.js:
 * frontend/clarin/js/services/documentService.js:
 * frontend/clarin/templates/collection-add.html:
 * frontend/clarin/templates/directives/uploader.html: Added support for
 uploading XML files. Also, during collection creation, the user can specify a
 document type, and a document handler. Two handlers are currently supported,
 "None" and "TEI XML".

27 April 2021 Petasis George <petasis@iit.demokritos.gr>