@@ -1,3 +1,11 @@
+16 June 2021 Petasis George <petasis@iit.demokritos.gr>
+ * backend/clarin/app/Http/Controllers/UserController.php:
+ * backend/clarin/resources/views/emails/activate-account.blade.php:
+ * backend/clarin/resources/views/emails/reset-password.blade.php:
+ * backend/clarin/resources/views/emails/verify-collection.blade.php: Fixes
+ during send of e-mails, so as the logo image is correctly loaded under both
+ the AnrjularJS and the Angular UI.
+
 31 May 2021 Petasis George <petasis@iit.demokritos.gr>
  * clarin/app/Http/routes.php: Added some more routes (domain dependent) to
  support the UI in Angular.
